--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "hem": "~0.1.8",
     "es5-shimify": "~0.0.1",
     "json2ify": "~0.0.1",
-    "jqueryify": "~0.0.1",
     "spine": "~1.0.7",
     "underscore": "latest",
     "nib": "latest",
-    "underscore": "latest",
-    "clean-css" : "latest",
-    "zooniverse": "git+ssh://git@github.com:zooniverse/Zooniverse.git"
+    "clean-css": "latest",
+    "zooniverse": "git+ssh://git@github.com:zooniverse/Zooniverse.git#no-deps"
   }
 }
