--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "underscore": "latest",
     "nib": "latest",
     "clean-css": "latest",
-    "zooniverse": "git+ssh://git@github.com:zooniverse/Zooniverse.git#no-deps"
+    "zooniverse": "git+ssh://git@github.com:zooniverse/Zooniverse.git#no-deps",
+    "zootorial": "0.3.4"
   },
   "scripts": {
     "start": "hem server"
