--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "haw serve",
-    "deploy-to-production": "haw build && publisssh ./build www.wormwatchlab.org && trash ./build",
+    "deploy-to-production": "haw build && publisssh ./build zooniverse-static/www.wormwatchlab.org && trash ./build",
     "deploy-locale": "seed-translation --project worms --env production"
   }
 }
