--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "underscore": "~1.5.2",
     "zootorial": "~0.3.6",
     "t7e": "~0.2.3",
-    "translator-seed": "~0.1.1"
+    "translator-seed": "~0.1.1",
+    "slide-tutorial": "~0.0.3"
   },
   "scripts": {
     "start": "haw serve",
