Updated deploy script to have staging

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "scripts": {
     "start": "haw serve",
-    "deploy": "npm run deploy-locale && haw build && publisssh ./build zooniverse-static/www.wormwatchlab.org && rm -rf ./build",
-    "deploy-locale": "seed-translation --project worms --env production"
+    "deploy-to-staging": "haw build ./build --force && publisssh ./build demo.zooniverse.org/worm-new-tutorial && rm -rf ./build",
+    "deploy-to-production": "npm run deploy-locale && haw build && publisssh ./build zooniverse-static/www.wormwatchlab.org && rm -rf ./build",
+    "deploy-locale": "seed-translation --project worms --env production",
+    "deploy": "npm run deploy-to-production"
   }
 }
